[package]
name = "pyth-lazer-example-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
pyth-lazer-protocol = "0.1.0"

tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
soketto = { version = "0.8.0", features = ["http"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
bincode = "1.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
