[package]
name = "pyth-lazer-solana-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyth_lazer_solana_example"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "client"
required-features = ["client"]

[dependencies]
pyth-lazer-sdk = "0.1.0"

solana-program = "1.18.26"
bytemuck = { version = "1.18.0", features = ["derive"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
solana-client = { version = "1.18", optional = true }
anyhow = { version = "1.0.93", optional = true }
solana-sdk = { version = "1.18.26", optional = true }
hex = { version = "0.4.3", optional = true }
pyth-lazer-solana-contract = { version = "0.1.0", optional = true }
env_logger = { version = "0.11.5", optional = true }

[dev-dependencies]
hex = "0.4.3"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.40.0", features = ["full"] }
byteorder = "1.5.0"
pyth-lazer-solana-contract = "0.1.0"
anchor-lang = "0.30.1"

[features]
solana-client = ["dep:solana-client"]
anyhow = ["dep:anyhow"]
solana-sdk = ["dep:solana-sdk"]
hex = ["dep:hex"]
pyth-lazer-solana-contract = ["dep:pyth-lazer-solana-contract"]
env_logger = ["dep:env_logger"]
client = ["solana-client", "anyhow", "solana-sdk", "hex", "pyth-lazer-solana-contract", "env_logger"]
