[package]
name = "mev-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.14", features = ["full", "node-bindings"] }
anyhow = "1.0.89"
dotenvy = "0.15"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "=1.0.203", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
hex = "0.4"
rand = "0.9.2"
plotters = "0.3"